--- a/css/logado.css
+++ b/css/logado.css
@@ -1,17 +1,60 @@
 #master{
     display: flex;
     flex-wrap: wrap;
+    flex-direction: row;
     justify-content: center;
-    background-color: brown;
+    align-items: stretch;
+    background-color: #D9D9D9;
+    width: 100%;
+    height: 900px;
+    margin-top: -10px;
+    margin-left: -10px;
+    margin-right: -10px;
+    
+    
     
 }
 
+#topodosite{
+    width: 100%;
+    height: 100px;
+    background-color: #333333;
+    border-bottom-width: 2px;
+    border-bottom-style: outset;
+    border-bottom-color: #00f;
+    color: #FFFFFF;
+    position: absolute;
+    text-align: center;
+    font-weight: 900;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+
 #top,#mid,#end{
-    background-color: rgb(213, 213, 236);
-    width: 30%;
-    height: 900px;
-    border: 4px solid;
-    overflow: hidden;
+    background-color: #FFFFFF;
+    color: #333333;
+    width: 32.7%;
+    height: 700px;
+    border-right-width: 1.5px;
+    border-right-style: dotted;
+    border-right-color: rgb(0, 0, 0);
+    margin-top: 100px;
+    margin-left: 0px;
+    font-weight: 900;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     
     
+    
+    
+}
+
+#end{
+    
+    text-align: center;
+    
+    
+}
+
+#temporario{
+    text-align: center;
 }
